--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>A Ascensão de Free Fire</h1>
+    <img src="img1.png"/>
     <h2>Uma jornada pelo mundo dos jogo mobile</h2>
     <p>Do lançamento Modeto ao fenômeno global: Free fire, desevolvido pela 111 Dots Studio e publicado pela garena,é um jogo de battle royale que revulocionou o mercado de jogos mobile desde seu lançamento em dezembro de 2017. Consabido para oferecer uma experiência de jogo fluida em dispositivos móveios de baixa perfomnce, Free fire rapidamente conquistou uma vasta base de jogadores graça á sua jogabilidade aacesível e intensa.</p>
     <p>O jogo e diferenci por partidas rápidas, com uraçao méia de 10 minuto, onde 50 jogadores õ lnçado em um ilha desertaa para lutar pela obreviência. A popularidade de free fire foi  impulsionada pela facilidade de acesso, permitinoque jogadores de todo o mundo, independente das  especiicações de seus dispositivos, pudesem participar d competição.</p>
