--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>históriadofreefire</title>
+    <style>
+        h1{
+            font-size:50;
+            font-family:cursive;
+            text-align: center;
+            color: crimson;
+        }
+    </style>
 </head>
 <body>
     <h1>A Ascensão de Free Fire</h1>
