--- a/index.html
+++ b/index.html
@@ -7,9 +7,16 @@
     <style>
         h1{
             font-size:50;
-            font-family:cursive;
+            font-family: cursive;
             text-align: center;
             color: crimson;
+        }
+
+
+        img{
+            width: 600px;
+            height: 600px;
+
         }
     </style>
 </head>
